--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ class="td11">Phone:</td><td  style="white-space:nowrap; text-align:left;" id="TB
 class="td11">+1-631-344-3767       </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
 class="td11">Bldg 510A PO Box 5000</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11">Updated:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11">June 4, 2020                 </td></tr><tr  
+class="td11">July 20, 2020                </td></tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11">Email: </td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
 class="td11"><a 
@@ -142,20 +142,26 @@ class="E">E</span>X</span></span>,  beamer,  GLoBES,  pythia,  ROOT,  MATHEMATIC
  B, European Physical Journal C, Journal of Mathematical Physics, Nuclear Physics B, Monthly Notices of
  the Royal Astronomical Society, and Universe.
  </li>
+ <li class="itemize">Brookhaven Neutrino Theory Virtual Seminar creator/organizer, 2020&#8211;Present.
+ </li>
  <li class="itemize">BNL HET seminar organizer, 2019&#8211;Present.
  </li>
  <li class="itemize">BNL HET lunch discussion organizer, 2019&#8211;Present.
  </li>
  <li class="itemize">NBIA Astroparticle journal club co-chair, 2017&#8211;2018. </li></ul>
-<!--l. 132--><p class="noindent" >
+<!--l. 133--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-9000"></a>Outreach</h4>
  <ul class="itemize0">
- <li class="itemize">Interacted with high school students via APS&#8217;s <span 
-class="cmti-10">Adopt-A-Physicist </span>program, 2018 Fall semester. </li></ul>
+ <li class="itemize">Interact   with   grade-school   students   via   APS&#8217;s   <span 
+class="cmti-10">Adopt-A-Physicist</span>,   Skype-A-Scientist,   <span 
+class="cmmi-10">&#x2026;</span><span style="margin-left:0.3em" class="thinspace"></span>  programs,
+ 2018&#8211;Present.
+ </li>
+ <li class="itemize">Brookhaven Women In Science (BWIS) member, 2020&#8211;Present. </li></ul>
                                                                                            
                                                                                            
-<!--l. 137--><p class="noindent" >
+<!--l. 139--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-10000"></a>Students Advised/Mentored</h4>
  <ul class="itemize0">
@@ -172,7 +178,7 @@ class="cmti-10">Diffuse supernova neutrino background</span>, 2017&#8211;2018.
 class="cmti-10">Star-forming galaxies as sources of high</span>
  <span 
 class="cmti-10">energy neutrinos</span>, 2017. Currently masters student at University of Copenhagen. </li></ul>
-<!--l. 146--><p class="noindent" >
+<!--l. 148--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-11000"></a>Teaching</h4>
  <ul class="itemize0">
@@ -184,7 +190,7 @@ class="cmti-10">energy neutrinos</span>, 2017. Currently masters student at Univ
  </li>
  <li class="itemize">Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school levels,
  2005&#8211;2015. </li></ul>
-<!--l. 154--><p class="noindent" >
+<!--l. 156--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-12000"></a>Professional Societies</h4>
  <ul class="itemize0">
