--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ class="td11">Phone:</td><td  style="white-space:nowrap; text-align:left;" id="TB
 class="td11">+1-631-344-3767       </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
 class="td11">Bldg 510A PO Box 5000</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11">Updated:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11">July 20, 2020                </td></tr><tr  
+class="td11">July 21, 2020                </td></tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11">Email: </td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
 class="td11"><a 
@@ -153,12 +153,12 @@ class="E">E</span>X</span></span>,  beamer,  GLoBES,  pythia,  ROOT,  MATHEMATIC
 <h4 class="likesubsectionHead"><a 
  id="x1-9000"></a>Outreach</h4>
  <ul class="itemize0">
+ <li class="itemize">Brookhaven Women In Science (BWIS) member, 2020&#8211;Present.
+ </li>
  <li class="itemize">Interact   with   grade-school   students   via   APS&#8217;s   <span 
 class="cmti-10">Adopt-A-Physicist</span>,   Skype-A-Scientist,   <span 
 class="cmmi-10">&#x2026;</span><span style="margin-left:0.3em" class="thinspace"></span>  programs,
- 2018&#8211;Present.
- </li>
- <li class="itemize">Brookhaven Women In Science (BWIS) member, 2020&#8211;Present. </li></ul>
+ 2018&#8211;Present. </li></ul>
                                                                                            
                                                                                            
 <!--l. 139--><p class="noindent" >
