--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ class="td11">Phone:</td><td  style="white-space:nowrap; text-align:left;" id="TB
 class="td11">+1-631-344-3767       </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
 class="td11">Bldg 510A PO Box 5000</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11">Updated:</td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11">July 21, 2020                </td></tr><tr  
+class="td11">October 26, 2020           </td></tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11">Email: </td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
 class="td11"><a 
@@ -130,6 +130,8 @@ class="E">E</span>X</span></span>,  beamer,  GLoBES,  pythia,  ROOT,  MATHEMATIC
  <ul class="itemize0">
  <li class="itemize">Snowmass neutrino oscillations subtopic convener and neutrino theory liason 2020&#8211;2021.
  </li>
+ <li class="itemize">Convener for WIN 2021.
+ </li>
  <li class="itemize">International Organizing Committee for Neutrino 2020.
  </li>
  <li class="itemize">Convener for Brookhaven Forum 2019 and DPF 2019.
@@ -149,7 +151,7 @@ class="E">E</span>X</span></span>,  beamer,  GLoBES,  pythia,  ROOT,  MATHEMATIC
  <li class="itemize">BNL HET lunch discussion organizer, 2019&#8211;Present.
  </li>
  <li class="itemize">NBIA Astroparticle journal club co-chair, 2017&#8211;2018. </li></ul>
-<!--l. 133--><p class="noindent" >
+<!--l. 134--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-9000"></a>Outreach</h4>
  <ul class="itemize0">
@@ -161,7 +163,7 @@ class="cmmi-10">&#x2026;</span><span style="margin-left:0.3em" class="thinspace"
  2018&#8211;Present. </li></ul>
                                                                                            
                                                                                            
-<!--l. 139--><p class="noindent" >
+<!--l. 140--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-10000"></a>Students Advised/Mentored</h4>
  <ul class="itemize0">
@@ -178,7 +180,7 @@ class="cmti-10">Diffuse supernova neutrino background</span>, 2017&#8211;2018.
 class="cmti-10">Star-forming galaxies as sources of high</span>
  <span 
 class="cmti-10">energy neutrinos</span>, 2017. Currently masters student at University of Copenhagen. </li></ul>
-<!--l. 148--><p class="noindent" >
+<!--l. 149--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-11000"></a>Teaching</h4>
  <ul class="itemize0">
@@ -190,7 +192,7 @@ class="cmti-10">energy neutrinos</span>, 2017. Currently masters student at Univ
  </li>
  <li class="itemize">Tutoring English, math, and physics at middle school, high school, undergraduate, and graduate school levels,
  2005&#8211;2015. </li></ul>
-<!--l. 156--><p class="noindent" >
+<!--l. 157--><p class="noindent" >
 <h4 class="likesubsectionHead"><a 
  id="x1-12000"></a>Professional Societies</h4>
  <ul class="itemize0">
