--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ class="td11"> Phone:  </td><td  style="white-space:nowrap; text-align:left;" id=
 class="td11"> +1-631-344-3767         </td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-3"  
 class="td11"> Bldg 510A PO Box 5000  </td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-4"  
 class="td11"> Updated:  </td><td  style="white-space:nowrap; text-align:left;" id="TBL-1-1-5"  
-class="td11"> November 12, 2025           </td></tr><tr  
+class="td11"> December 28, 2025           </td></tr><tr  
  style="vertical-align:baseline;" id="TBL-1-2-"><td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-1"  
 class="td11"> Email: </td> <td  style="white-space:nowrap; text-align:left;" id="TBL-1-2-2"  
 class="td11"> <a 
@@ -108,7 +108,7 @@ href="https://arxiv.org/search/?searchtype=author&query=Denton%2C+P+B" >[arXiv]<
  <!--l. 95--><p class="noindent" >Physical Review D Reviewer Excellence 2024 Award, awarded April 2024.
  </li>
  <li class="itemize">
- <!--l. 96--><p class="noindent" >Neutrino Physics Center (NPC) award of to work with Stephen Parke at Fermilab, awarded May 2023.
+ <!--l. 96--><p class="noindent" >Neutrino Physics Center (NPC) award to work with Stephen Parke at Fermilab, awarded May 2023.
  </li>
  <li class="itemize">
  <!--l. 97--><p class="noindent" >Nominated and selected as the BNL delegate to the 2022 Science and Technology in Society Forum in Kyoto,
